Improve highlightCSS func

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -223,14 +223,15 @@ code .reference-combinator { color: #faa }
 code .property, code .logical, code .nth .n, code .colon { font-style: italic }
 code .no-nest { color: #ddd }
 code .value { color: #aaf }
+code .unit { color: #bcf }
 code .inline-comment { color: #888 }
 code .keyword { color: #fd3 }
-code .reserved { color: #f00 }
+code .reserved, code .bad { color: #f00 }
 code .constant, code .string .escape { color: #df0 }
 code .string { color: #6C3 }
 code .regex { color: #ffa }
 code .regex .open, code .regex .close, code .regex .modifier { color: #ff0 }
-code .regex .escape { color: #afa }
+code .regex .escape, code .color { color: #afa }
 code .regex .backreference { color: #0f0 }
 code .regex .special { color: #faa }
 code .regex .grouper { color: #fff }
@@ -241,7 +242,7 @@ code .regex .charclass .punctuation, code .function-call { color: #f90 }
 code .regex .quantifier { color: #2af }
 code .regex .quantifier .punctuation { color: #8cf }
 code .regex .modifier, code .generator-star, code .newvar { font-weight: bold }
-code .operator, code .generator-star, code .colon { color: #ff8 }
+code .operator, code .generator-star, code .colon, code .value.string { color: #ff8 }
 code .operator.assigns, code .equals { color: #8ff }
 code .argument, code .number { color: #3df }
 code .function-name { color: #f60 }
