--- a/http/a/main.css
+++ b/http/a/main.css
@@ -279,8 +279,28 @@ code .browser { color: #9bd }
 	padding: 2px 2px 0 0;
 	height: 16px;
 }
-.comment:not(:hover) .sctrls svg:not(.clkd) { opacity: 0.4 }
+.comment:not(:hover) .sctrls > :not(.clkd) { opacity: 0.4 }
 .comment img { max-height: 200px }
+.comment .mention {
+	background: #faa;
+	border-radius: 4px;
+}
+.comment.editing { background: #4af }
+.comment.deleted::before {
+	content: '';
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+}
+.comment.deleted::before { background: rgba(255, 128, 128, 0.95) }
+#pingsug {
+	position: absolute;
+	margin-top: -18px;
+}
+#pingsug span {
+	background: #ffa;
+	padding: 2px;
+	margin: 0 2px;
+}
 .c-sig { padding: 2px 0 0 4px }
 .c-sig > * { color: #666 }
 .ctrls :hover, .diamond { color: #000 }
