Add space between answers

--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -105,3 +105,4 @@ code.blk:empty { display: none }
 	opacity: 0;
 	transition: opacity 0.2s ease-out;
 }
+.answer:not(:first-of-type) { margin-top: 8px }
