--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -89,7 +89,7 @@ code.blk:empty { display: none }
 .editbtn, .editbtn:hover { color: #0b0 }
 .editbtn:visited { color: #090 }
 .delbtn, .delbtn:hover { color: #f00 }
-#comment:target + #addcomment { display: none }
+.commentform:target + .addcomment { display: none }
 #answer, #answerta { z-index: 1 }
 #answerta:focus + #answertips, #answertips:hover {
 	z-index: 1;
