--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -41,7 +41,7 @@
 	padding: 2px 6px;
 	box-shadow: 1px 1px 1px #444;
 }
-#comments { margin: 6px 0 }
+.comments { margin: 6px 0 }
 code.blk:empty { display: none }
 .comment .sctrls { padding-right: 0.3em }
 .comment .ctrl {
