--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -77,6 +77,17 @@ small, a.small, footer, .ctrls a { font-size: 0.85em }
 .column-small { column-width: 10em }
 .column-medium { column-width: 16em }
 .column-large { column-width: 24em }
+.max-width { max-width: 500px }
+.iframe-16-9 {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+}
+.iframe-16-9 iframe {
+	width: 100%;
+	height: 100%;
+}
 .flexcont {
 	display: flex;
 	flex-wrap: wrap;
