--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -49,7 +49,7 @@ body {
 .sumar, :not(img) + .desc, .blk { margin-top: 4px }
 .umar, :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
 .bumar, h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 8px }
-.bmar, .error, #notifs li { margin-bottom: 6px }
+.bmar, .max-width, .error, #notifs li { margin-bottom: 6px }
 .lftpad, .user { margin-left: 6px }
 .indt { margin-left: 32px }
 .pad, a.center-text.blk, .desc, #content, #footer, .error, .popup, code.blk, .comment { padding: 4px }
@@ -77,7 +77,7 @@ small, a.small, footer, .ctrls a { font-size: 0.85em }
 .column-small { column-width: 10em }
 .column-medium { column-width: 16em }
 .column-large { column-width: 24em }
-.max-width { max-width: 500px }
+.max-width { max-width: 448px }
 .iframe-16-9 {
 	position: relative;
 	width: 100%;
