--- a/http/a/main.css
+++ b/http/a/main.css
@@ -140,7 +140,7 @@ li {
 .ta-cont {
 	width: 100%;
 	position: relative;
-	overflow: auto;
+	overflow-x: hidden; overflow-y: auto;
 	border: 1px solid #fff;
 }
 .code, .code-display {
@@ -152,8 +152,6 @@ li {
 	background: transparent;
 	font-family: monospace;
 	white-space: pre-wrap;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
 	font-size: 1rem;
 	line-height: 1.2;
 	resize: none;
@@ -173,12 +171,11 @@ li {
 	padding-right: 1px;
 }
 #caret {
-	display: inline-block;
 	position: absolute;
 	background: #fff;
 	width: 1px;
+	margin-right: -1px;
 }
-#caret[hidden] { display: none }
 code .line::before {
 	left: 0;
 	content: attr(data-linenum);
