--- a/http/dev/html.css
+++ b/http/dev/html.css
@@ -109,7 +109,7 @@ section { background: transparent }
 	fill: #777;
 	transition: none;
 }
-.up.clkd { fill: #f90 }
+.clkd > .up { fill: #f90 }
 .fl { fill: #f88 }
 .fl:hover {
 	fill: #f66;
