--- a/http/a/main.css
+++ b/http/a/main.css
@@ -282,7 +282,7 @@ code .browser { color: #9bd }
 	padding-top: 2px;
 	height: 16px;
 }
-.comment .ctrl {
+.comment .ctrl:not([hidden]) {
 	display: inline-block;
 	width: 19px;
 	vertical-align: top;
@@ -308,6 +308,7 @@ code .browser { color: #9bd }
 	top: 0; right: 0; bottom: 0; left: 0;
 }
 .comment.deleted::before { background: rgba(255, 128, 128, 0.95) }
+.comment.deleted[id^=c]::before { left: 74px }
 #pingsug {
 	position: absolute;
 	margin-top: -18px;
