--- a/http/a/main.css
+++ b/http/a/main.css
@@ -15,16 +15,11 @@ body {
 	font-size: 0.85em;
 	line-height: 1.5em;
 }
+::-moz-placeholder { color: #555 }
 @keyframes target {
 	0%, 30% { background: #f70 }
 }
-@-webkit-keyframes target {
-	0%, 30% { background: #f70 }
-}
-:not(.target):target {
-	animation: target 1s;
-	-webkit-animation: target 1s;
-}
+:not(.target):target { animation: target 1s }
 .blk, img.center, textarea { display: block }
 .ib { display: inline-block }
 .inline, summary * { display: inline }
@@ -261,7 +256,6 @@ code .browser { color: #9bd }
 	padding: 2px 8px;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 	animation: fadein 0.5s;
-	-webkit-animation: fadein 0.5s;
 }
 .connection-error a, .connection-error a:visited { color: #ffb }
 .connection-error a:hover { color: #ffd }
@@ -366,12 +360,8 @@ code.blk {
 	padding: 2px 8px;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 	animation: fadein 0.5s;
-	-webkit-animation: fadein 0.5s;
 }
 @keyframes fadein {
-	from { opacity: 0 }
-}
-@-webkit-keyframes fadein {
 	from { opacity: 0 }
 }
 h1 small, h2 small { font-size: 0.85rem }
@@ -602,7 +592,7 @@ body > * { flex-shrink: 0 }
 	margin: 0 auto;
 	font-size: 5vmin;
 }
-@media (min-width: 800px) {
+@media (min-width: 840px) {
 	#logo-big { max-width: 80% }
 }
 @media (min-width: 1500px) {
@@ -647,30 +637,22 @@ body > * { flex-shrink: 0 }
 	font-size: 0;
 }
 #nav a {
-	display: inline-block;
 	color: #ddd;
 	font-size: 0.9rem;
-	line-height: 1.6;
+	line-height: 1.9;
+	padding: 0 3px;
 }
 #nav span { padding: 0 4px }
 #nav nav {
 	margin: 0 4px;
 	display: inline-block;
 }
-#nav #logo {
-	padding: 0;
-	line-height: 1;
-	margin-bottom: 2px;
-}
+#nav #logo { display: inline-block }
 #logo svg {
 	max-width: 100%;
-	width: 180px;
-	padding: 3px 8px;
-	background: #eee;
-	transition: background 0.1s;
+	height: 100%;
+	fill: #fff;
 }
-#logo svg:hover { background: #fff }
-#logo svg:active { background: #ddd }
 #nav form {
 	min-width: 8em;
 	width: 100%;
@@ -687,43 +669,51 @@ body > * { flex-shrink: 0 }
 }
 #notifs:empty { display: none }
 #content { padding-bottom: 1rem }
-#nav nav > a.active { font-weight: bold }
-@media (max-width: 359px) {
-	#nav #logo { width: 100% }
-	#nav div {
+#nav a.active > span { font-weight: bold }
+@media (max-width: 375px) {
+	#nav #logo {
+		height: 2rem;
+		margin-bottom: 4px;
+		padding: 3px 8px;
+	}
+	#nav #logo, #nav svg { width: 100% }
+	#nav div:not(:first-of-type) {
 		min-width: 40%;
 		display: inline-block;
 	}
-}
-@media (max-width: 279px) {
-	#nav.subs div { display: inline }
-}
-@media (min-width: 360px) {
-	#nav { text-align: right }
-}
-@media (min-width: 360px) and (max-width: 799px) {
-	#logo {
-		float: left;
-		margin-right: 4px;
-	}
-	#logo svg { width: 145px }
-	#nav > div:not(:first-of-type) { margin-left: 4px }
-	#nav div { padding-top: 3px }
-	#nav form { margin: 3px 0 }
-	#nav form input { max-width: 18em }
-}
-@media (min-width: 360px) and (max-width: 499px) {
-	#nav div, #nav a { display: inline }
+	#nav.sub div { display: inline }
 	#nav .active nav + spacer::after {
 		content: '\a';
 		white-space: pre;
 	}
-	#nav form {
-		width: calc(100% - 166px - 2em);
-		float: right;
+}
+@media (min-width: 376px) and (max-width: 839px) {
+	#nav {
+		text-align: right;
+		margin-top: 2px;
 	}
+	#nav #logo {
+		float: left;
+		margin-right: 4px;
+		height: calc(4px + 1.9em);
+		margin: -2px 0;
+		padding: 0 10px;
+	}
+	#logo svg { width: 145px }
+	#nav > div:last-of-type { margin-left: 6px }
+	#nav form { margin: 4px 0 }
+	#nav form input { max-width: 18em }
+}
+@media (min-width: 376px) and (max-width: 499px) {
+	#nav.sub div { display: inline }
+	#nav .active nav + spacer::after {
+		content: '\a';
+		white-space: pre;
+	}
+	#nav form { width: 100% }
 }
 @media (min-width: 500px) {
+	#nav a { display: inline-block }
 	#nav:not(.sub) {
 		display: flex;
 		flex-wrap: wrap;
@@ -734,12 +724,8 @@ body > * { flex-shrink: 0 }
 		flex-grow: 1;
 	}
 }
-@media (min-width: 500px) and (max-width: 799px) {
-	#logo {
-		flex-grow: 1;
-		height: 0;
-		text-align: left;
-	}
+@media (min-width: 500px) and (max-width: 839px) {
+	#nav div:nth-of-type(2) { flex-grow: 1 }
 }
 @media (min-width: 645px) {
 	#nav {
@@ -748,54 +734,60 @@ body > * { flex-shrink: 0 }
 		justify-content: center;
 	}
 }
-@media (max-width: 799px) {
-	#nav > div > a.active > span { text-decoration: underline }
+@media (max-width: 839px) {
+	#nav { margin-bottom: 2px }
+	#nav a:hover > span, #nav #logo:hover { background: #33a }
+	#nav a.active > span, #nav a:active > span, #logo.active, #nav #logo:active { background: #119 }
+	#nav a.active > span, #nav a:active > span, #nav #logo:active, #nav a:hover > span, #nav #logo:hover {
+		display: inline-block;
+		line-height: 1.5;
+	}
 	#nav :not(.active) > nav { display: none }
 	#nav nav { background: #333 }
 }
-@media (min-width: 800px) {
-	#nav { background: #111 }
+@media (pointer: coarse) and (max-width: 839px) {
+	#nav a { font-size: 1rem }
+}
+@media (min-width: 840px) {
+	#nav {
+		background: #000;
+		text-align: right;
+	}
 	#nav > a { transition: background 0.15s }
-	#nav a:not(.active):not(.unread):hover { background: #333 }
-	#nav a:hover, #nav .active { color: #fff }
-	#nav .active, #nav a:not(.active):not(.unread):active { background: #000 }
-	#logo svg {
-		width: 165px;
-		padding: 4px 12px;
-	}
+	#nav a:not(.unread):hover { background: #33a }
+	#nav .active, #nav a:not(.unread):active { background: #119 }
 	#nav #logo {
-		line-height: 0;
-		margin-bottom: 0;
+		height: 36px;
+		padding: 6px 12px;
 	}
-	#nav a { line-height: 32px }
-	#nav div > a { border-right: 1px solid #444 }
-	#nav div:not(:first-of-type) { flex-grow: 1 }
-	#nav div:not(:first-of-type) > :first-child { border-left: 1px solid #444 }
+	#nav a { line-height: 36px }
+	#nav div:not(:first-of-type) > a { border-right: 1px solid #444 }
+	#nav div:last-of-type { flex-grow: 1 }
+	#nav div > :first-child:not(#logo) { border-left: 1px solid #444 }
 	#nav a, #nav form {
 		padding: 0 10px;
-		background: #222;
+		background: #000;
 	}
 	#nav nav > a, #nav nav li {
 		background: #161616;
 		width: 100%;
 	}
 	#nav form {
-		line-height: 32px;
+		line-height: 36px;
 		margin: 0;
 		max-width: 24em;
 	}
-	#nav .active { background: #000 }
-	#nav > div > a, #nav > div { position: relative }
+	#nav > div > a, #nav div { position: relative }
 	#nav nav {
 		position: absolute;
 		z-index: 4;
 		top: 100%; left: 0;
 		margin: 0;
-		text-align: left;
 		overflow: hidden;
-		max-height: 96px;
+		max-height: 108px;
 		transition: max-height 0.2s;
 		box-shadow: 1px 1px 8px #000;
+		text-align: left;
 	}
 	nav#notifs {
 		font-size: 1rem;
@@ -841,13 +833,14 @@ body > * { flex-shrink: 0 }
 	#sidebar {
 		position: absolute;
 		top: 0; right: 0; bottom: 0;
-		margin-top: 32px;
+		margin-top: 36px;
 		width: calc(45% - 250px);
 		min-width: 430px;
 		overflow-x: hidden;
 	}
 }
-#nav > div:nth-of-type(2) > a:nth-child(2) { transition: color 0.1s, background-color 0.5s }
+#nav a:hover, #nav .active { color: #fff }
+#nav > div:last-of-type > a:nth-child(2) { transition: color 0.1s, background-color 0.5s }
 #nav .unread {
 	background: #d00;
 	color: #fff;
