--- a/http/a/main.css
+++ b/http/a/main.css
@@ -54,6 +54,8 @@ code { padding: 2px; }
 .mono, .ctrls { font-family: monospace }
 .ctrls a { padding: 0 2px }
 .grey, a.small, .c-sig, .ctrls a { color: #444 }
+.diamond { color: #000 }
+.private { color: #90f }
 .disabled, a.disabled:hover, a.disabled:active { color: #999 }
 small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer, #nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .user a, .c-sig a, .ctrls a { text-decoration: none }
 small, a.small, footer, .ctrls a { font-size: 0.85em }
@@ -312,7 +314,6 @@ code .browser { color: #9bd }
 	padding: 2px;
 	margin: 0 2px;
 }
-.diamond { color: #000 }
 .c-sig { padding: 2px 0 0 4px }
 .c-sig > * { color: #666 }
 .ctrls :hover { color: #00f }
