--- a/http/a/main.css
+++ b/http/a/main.css
@@ -513,6 +513,29 @@ a.blk {
 }
 a.blk:hover, a.blk:active { background: rgba(255, 255, 255, 0.2) }
 a.blk:active { color: #00f }
+.button {
+	display: inline-block;
+	margin: 8px 0;
+	padding: 4px 8px;
+	background: #6cf;
+	border-radius: 4px;
+	border: 0.5px solid #666;
+	transition: background-color 0.2s;
+	box-shadow: 1px 1px 3px #666;
+	text-decoration: none;
+}
+.button:hover { background: #7df }
+.button:active { background: #0bf }
+.button:disabled {
+	background: #fff;
+	transition: none;
+}
+.button.larger span { vertical-align: bottom }
+a svg {
+	vertical-align: middle;
+	margin-right: 4px;
+}
+.button svg { margin-right: 6px }
 input[type=text], input[type=email], input[type=password] { width: 18em }
 input[type=text], input[type=email], input[type=number], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
@@ -642,16 +665,19 @@ body > * { flex-shrink: 0 }
 	line-height: 1.9;
 	padding: 0 3px;
 }
+#nav a:note(#logo) { white-space: pre }
 #nav span { padding: 0 4px }
 #nav nav {
 	margin: 0 4px;
 	display: inline-block;
 }
 #nav #logo { display: inline-block }
-#logo svg {
+#logo > svg {
 	max-width: 100%;
 	height: 100%;
 	fill: #fff;
+	margin: 0;
+	vertical-align: top;
 }
 #nav form {
 	min-width: 8em;
@@ -699,7 +725,7 @@ body > * { flex-shrink: 0 }
 		margin: -2px 0;
 		padding: 0 10px;
 	}
-	#logo svg { width: 145px }
+	#logo > svg { width: 145px }
 	#nav > div:last-of-type { margin-left: 6px }
 	#nav form { margin: 3px 0 }
 	#nav form input { max-width: 18em }
@@ -744,6 +770,7 @@ body > * { flex-shrink: 0 }
 	}
 	#nav :not(.active) > nav { display: none }
 	#nav nav { background: #333 }
+	#github-button svg { display: none }
 }
 @media (pointer: coarse) and (max-width: 839px) {
 	#nav a { font-size: 1rem }
@@ -840,7 +867,6 @@ body > * { flex-shrink: 0 }
 	}
 }
 #nav a:hover, #nav .active { color: #fff }
-#nav > div:last-of-type > a:nth-child(2) { transition: color 0.1s, background-color 0.5s }
 #nav .unread {
 	background: #d00;
 	color: #fff;
